force-app/main/default/objects/MCUBE_Object_Api__c/fields/Secondary_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_No__c</fullName>
    <label>Secondary Mobile No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>