force-app/main/default/objects/MCUBE_Object_Api__c/fields/Value_4__c.field-meta.xml
<CustomField>
    <fullName>Value_4__c</fullName>
    <label>Value 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>