force-app/main/default/objects/MCUBE_Object_Api__c/fields/Value_6__c.field-meta.xml
<CustomField>
    <fullName>Value_6__c</fullName>
    <label>Value 6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>