force-app/main/default/objects/MCUBE_Object_Api__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LandingNumber__c</columns>
    <columns>Field2__c</columns>
    <columns>Value2__c</columns>
    <columns>Field_4__c</columns>
    <columns>Value_4__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>